# typst_box_extractor

./: Cargo.toml  README.md  input.typ  output.json
src/: main.rs  render.rs  word_analysis.rs  world.rs
