[package]
name = "box_extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
comemo = "0.4.0"
serde = "1.0.219"
serde_json = "1.0.140"
tar = "0.4.44"
time = "0.3.41"
tiny-skia = "0.11.4"
ttf-parser = "0.25.1"
typst = "0.13.1"
typst-kit = "0.13.1"
typst-render = "0.13.1"
ureq = "2.9"
zune-inflate = { version = "0.2", default-features = false, features = [
  "gzip",
  "std",
] }
